--- a/src/components/Page/Page.css
+++ b/src/components/Page/Page.css
@@ -1,4 +1,4 @@
-@import '../variables.css';
+/*@import '../variables.css';*/
 
 .root {
   padding-left: 20px;
@@ -13,7 +13,7 @@
 .container {
   margin: 0 auto;
   padding: 0 0 40px;
-  max-width: var(--max-content-width);
+  max-width: 1000px;
 }
 
 .container h1{
