removing extractor/combiners

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .root {
   color: #fff;
-  background-image: url('./software.jpeg');
+  background-image: url('http://res.cloudinary.com/adelonga/image/upload/v1489454543/software_kdzdwt.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100% 100%;
