increasing font weight for mobile styles

--- a/src/routes/home/Home.css
+++ b/src/routes/home/Home.css
@@ -194,6 +194,9 @@
 }
 
 @media (max-width: 480px) {
+  html {
+    font-weight: 400;
+  }
   .workProjCard{
     height: 250px;
     font-size: 15px;
