--- a/src/routes/home/Home.css
+++ b/src/routes/home/Home.css
@@ -8,6 +8,15 @@
   max-width: 1000px;
 }
 
+.showMore {
+  text-align: center;
+  margin: auto;
+  color: #2066f7;
+  font-size: 1.5rem;
+  font-weight: 500;
+  padding-bottom: 15px;
+}
+
 .workProjCard{
   background-color: #ccc;
   height: 285px;
@@ -122,7 +131,7 @@
 
 .workExperience-enter.workExperience-enter-active {
   opacity: 1;
-  transition: opacity 500ms ease-in;
+  transition: opacity 1500ms ease-in;
 }
 
 .workExperience-leave {
@@ -131,7 +140,7 @@
 
 .workExperience-leave.workExperience-leave-active {
   opacity: 0.01;
-  transition: opacity 300ms ease-in;
+  transition: opacity 1300ms ease-in;
 }
 
 
@@ -150,7 +159,7 @@
 
 .personalProj-enter.personalProj-enter-active {
   opacity: 1;
-  transition: opacity 500ms ease-in;
+  transition: opacity 1500ms ease-in;
 }
 
 .personalProj-leave {
@@ -159,7 +168,7 @@
 
 .personalProj-leave.personalProj-leave-active {
   opacity: 0.01;
-  transition: opacity 300ms ease-in;
+  transition: opacity 1300ms ease-in;
 }
 
 /************** Media Queries ***************/
